--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -136,7 +136,7 @@
     <!-- End of QR code scanner colors -->
 
     <!-- Search bar background color -->
-    <color name="search_bar_background">?androidprv:attr/colorSurfaceHighlight</color>
+    <color name="search_bar_background">@*android:color/system_neutral1_0</color>
 
     <color name="back_gesture_indicator">#4182ef</color>
 
