--- a/res/values/cherish_strings.xml
+++ b/res/values/cherish_strings.xml
@@ -360,7 +360,6 @@
     <!-- Volume link notification -->
     <string name="volume_link_notification_title">Link ring &amp; notification volumes</string>
 
-    <!-- Black theme for dark mode -->
-    <string name="black_bg_title">Pure black</string>
-    <string name="black_bg_summary">Pure black background for dark theme</string>
+    <!-- Sound: Title for the option managing ring volume. When unlinked [CHAR LIMIT=30] -->
+    <string name="ring_volume_unlinked_option_title">Ring volume</string>
 </resources>
