Transistent task mode setting
Change-Id: I5371a41a17f052d7386c12eb97f37387d574c123
Signed-off-by: Hưng Phan <phandinhhungvp2001@gmail.com>

--- a/res/values/cherish_strings.xml
+++ b/res/values/cherish_strings.xml
@@ -394,4 +394,12 @@
     <string name="fingerprint_enroll_touch_dialog_message_front">Touch the sensor on the front of your phone.</string>
     <string name="fingerprint_enroll_touch_dialog_message_rear">Touch the sensor on the back of your phone.</string>
     <string name="fingerprint_enroll_touch_dialog_message_side">Touch the sensor on the side of your phone.</string>
+
+    <!-- Transistent task mode (Tadi mode) -->
+    <string name="transistent_task_mode_title">Transistent task mode</string>
+    <string name="transistent_task_mode_dialog_title">Transistent task mode (Reboot your device to apply changes)</string>
+    <string name="transistent_task_mode_summary">Dismiss apps from recents when last activity gets closed using back button.</string>
+    <string name="transistent_task_mode_default">Disable (Default)</string>
+    <string name="transistent_task_mode_allow">Enable (Some apps will stay)</string>
+    <string name="transistent_task_mode_force">Force (Override app behaviour)</string>
 </resources>
